--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,11 +3,15 @@
   justify-content: center;
   height: 100vh;
   color: white;
-  margin-top: 15rem;
+  margin-top: 12rem;
+
+  @media (max-width: 1024px) {
+    margin-top: 8rem;
+  }
 }
 
 .body {
-  width: 1200px;
+  width: 1300px;
   display: flex;
   flex-direction: column;
   align-items: center;
