--- a/components/slidingImages.module.css
+++ b/components/slidingImages.module.css
@@ -8,6 +8,10 @@
   z-index: 1;
   margin-bottom: 100vh;
 
+  @media (max-width: 1440px) {
+    display: none;
+  }
+
   .slider {
     display: flex;
     position: relative;
@@ -26,6 +30,7 @@
         position: relative;
         width: 80%;
         height: 80%;
+
         img {
           object-fit: cover;
         }
