Add and fix more mobile media queries, update second text in description.

--- a/components/contact.module.css
+++ b/components/contact.module.css
@@ -7,6 +7,10 @@
   background-color: #141516;
   position: relative;
 
+  @media (max-width: 764px) {
+    display: none;
+  }
+
   .button {
     border-radius: 3em;
     border: 1px solid rgb(136, 136, 136);
