--- a/components/projects.module.css
+++ b/components/projects.module.css
@@ -1,12 +1,16 @@
 .project {
   display: flex;
-  width: 100%;
+  width: 100vw;
   justify-content: space-between;
   align-items: center;
   padding: 0;
   border-top: 1px solid rgb(201, 201, 201);
   cursor: pointer;
   transition: all 0.2s;
+
+  /* @media (max-width: 768px) {
+    max-width: max-content;
+  } */
 }
 
 .project div {
@@ -47,7 +51,7 @@
 }
 
 .project h2 {
-  font-size: 75px;
+  font-size: 70px;
   font-weight: 400;
   transition: all 0.4s;
   white-space: nowrap;
