--- a/components/description.module.css
+++ b/components/description.module.css
@@ -44,8 +44,9 @@
 
     p {
       margin: 0px;
+
       &:nth-of-type(1) {
-        font-size: clamp(1.55em, 2.3vw, 2.5em);
+        font-size: clamp(1.55em, 2.3vw, 2.2em);
         gap: 8px;
         line-height: 1.3;
 
@@ -68,8 +69,8 @@
           width: 60%;
         }
 
-        @media (min-width: 481px) and (max-width: 768px) {
-          width: 80%;
+        @media (min-width: 768px) {
+          width: 60%;
         }
       }
     }
