--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,5 +11,8 @@
 
 html {
   background-color: #15171b;
-  overflow-x: hidden;
+}
+
+body {
+  overflow-x: clip;
 }
