--- a/components/slidingImages.module.css
+++ b/components/slidingImages.module.css
@@ -9,7 +9,8 @@
   margin-bottom: 100vh;
 
   @media (max-width: 1440px) {
-    display: none;
+    width: 100vw;
+    overflow-x: clip;
   }
 
   .slider {
@@ -19,6 +20,12 @@
     width: 120vw;
     left: -10vw;
 
+    @media (max-width: 764px) {
+      gap: 2vw;
+      width: 300vw;
+      left: -40vw;
+    }
+
     .project {
       width: 25%;
       height: 20vw;
@@ -26,10 +33,20 @@
       align-items: center;
       justify-content: center;
 
+      @media (max-width: 764px) {
+        /* width: 75%; */
+        height: 45vh;
+      }
+
       .imageContainer {
         position: relative;
         width: 80%;
         height: 80%;
+
+        @media (max-width: 764px) {
+          width: 100%;
+          height: 100%;
+        }
 
         img {
           object-fit: cover;
@@ -51,6 +68,10 @@
       z-index: 1;
       position: absolute;
       box-shadow: 0px 60px 50px rgba(0, 0, 0, 0.748);
+
+      @media (max-width: 764px) {
+        height: 1000%;
+      }
     }
   }
 }
