--- a/components/contact.module.css
+++ b/components/contact.module.css
@@ -8,7 +8,8 @@
   position: relative;
 
   @media (max-width: 764px) {
-    display: none;
+    max-width: max-content;
+    overflow-x: clip;
   }
 
   .button {
@@ -35,9 +36,17 @@
   .body {
     padding-top: 250px;
     margin-top: -350px;
-    width: 100%;
+    width: 100vw;
     max-width: 1800px;
     background-color: #141516;
+
+    @media (max-width: 764px) {
+      margin-top: -225px;
+      padding-left: 25px;
+      padding-right: 25px;
+      display: flex;
+      flex-direction: column;
+    }
 
     .title {
       border-bottom: 1px solid rgb(134, 134, 134);
@@ -45,6 +54,11 @@
       margin-left: 200px;
       margin-right: 200px;
       position: relative;
+
+      @media (max-width: 764px) {
+        margin-left: 0;
+        margin-right: 0;
+      }
 
       span {
         display: flex;
@@ -55,12 +69,21 @@
         font-size: 5vw;
         margin: 0px;
         font-weight: 300;
+
+        @media (max-width: 764px) {
+          font-size: 9vw;
+        }
       }
 
       .buttonContainer {
         position: absolute;
         left: calc(100% - 400px);
         top: calc(100% - 75px);
+
+        @media (max-width: 764px) {
+          left: calc(100% - 190px);
+          top: calc(100% - 50px);
+        }
 
         .button {
           width: 180px;
@@ -75,12 +98,21 @@
           cursor: auto;
           padding: 0px;
 
+          @media (max-width: 764px) {
+            width: 100px;
+            height: 100px;
+          }
+
           p {
             margin: 0px;
             font-size: 16px;
             font-weight: 300;
             z-index: 2;
             position: relative;
+
+            @media (max-width: 764px) {
+              font-size: 12px;
+            }
           }
         }
       }
@@ -94,10 +126,25 @@
 
     .nav {
       display: flex;
+      align-items: center;
       gap: 20px;
       margin-top: 150px;
       margin-left: 200px;
       margin-right: 200px;
+
+      @media (max-width: 764px) {
+        flex-direction: column;
+        margin-top: 120px;
+        margin-left: 0px;
+        margin-right: 0px;
+      }
+
+      .button {
+        @media (max-width: 764px) {
+          width: 280px;
+          padding: 12px 6px;
+        }
+      }
     }
 
     .info {
@@ -105,6 +152,15 @@
       justify-content: space-between;
       margin-top: 200px;
       padding: 20px;
+
+      @media (max-width: 764px) {
+        justify-content: space-between;
+        overflow-x: clip;
+        gap: 30px;
+        align-items: center;
+        margin-top: 50px;
+        padding: 20px;
+      }
 
       a {
         text-decoration: none;
@@ -115,6 +171,14 @@
         display: flex;
         gap: 10px;
         align-items: flex-end;
+
+        p {
+          @media (max-width: 764px) {
+            font-size: 12px;
+            white-space: preserve nowrap;
+          }
+        }
+
         p,
         h3 {
           margin: 0px;
@@ -153,6 +217,10 @@
           cursor: default;
           font-weight: 700;
           font-size: 12px;
+
+          @media (max-width: 764px) {
+            font-size: 10px;
+          }
         }
       }
     }
