--- a/components/slidingImages.module.css
+++ b/components/slidingImages.module.css
@@ -20,7 +20,13 @@
     width: 120vw;
     left: -10vw;
 
-    @media (max-width: 764px) {
+    @media (min-width: 768px) and (max-width: 1440px) {
+      gap: 2.5vw;
+      width: 300vw;
+      left: -20vw;
+    }
+
+    @media (max-width: 768px) {
       gap: 2vw;
       width: 300vw;
       left: -40vw;
@@ -33,8 +39,11 @@
       align-items: center;
       justify-content: center;
 
-      @media (max-width: 764px) {
-        /* width: 75%; */
+      @media (min-width: 768px) and (max-width: 1440px) {
+        height: 60vh;
+      }
+
+      @media (max-width: 768px) {
         height: 45vh;
       }
 
