--- a/components/description.module.css
+++ b/components/description.module.css
@@ -6,16 +6,16 @@
   justify-content: center;
   color: white;
 
-  @media (min-width: 1025px) and (max-width: 1440px) {
+  /* @media (min-width: 1025px) and (max-width: 1440px) {
     padding-left: 150px;
     padding-right: 150px;
     margin-top: 150px;
-  }
+  } */
 
-  @media (min-width: 769px) and (max-width: 1024px) {
+  @media (min-width: 769px) and (max-width: 1440px) {
     padding-left: 100px;
     padding-right: 100px;
-    margin-top: 100px;
+    margin-top: 150px;
   }
 
   @media (min-width: 481px) and (max-width: 768px) {
